# consultorio_md_web_final

./: README.md  pyproject.toml
src/: main.py
src/routes/: consultorio.py
src/static/: index.html
