[tool.poetry]
name = "consultorio-md-web"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
flask-cors = "^6.0.0"
blinker = "^1.6"
click = "^8.1.3"
Flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
greenlet = "^3.0.0"
itsdangerous = "^2.1.2"
Jinja2 = "^3.1.2"
MarkupSafe = "^2.1.3"
SQLAlchemy = "^2.0.23"
typing-extensions = "^4.10.0"
Werkzeug = "^3.0.0"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"


